--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-hello!! world
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<link rel="stylesheet" href="styles.css" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+
+	<body>
+		<div class="postcard">
+			<div class="postcard-header">
+				<h1>My postcard</h1>
+				<image
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
+				></image>
+			</div>
+			<div class="postcard-body">
+				<div class="body-left">
+					<p class="no-margin">Look how awesome! This is a postcard that i created using HTML5 and CSS3 during my 4Geeks Acedemy Curse!</p>
+					<p>This is so cool, can't wait to start doing new stuff!</p>
+				</div>
+				<div class="body-right">
+					<div>
+						<label for="name">Some name:</label>
+						<input type="text" id="name" name="name_postard" />
+						<label for="email">Some email:</label>
+						<input type="text" id="email" name="email_postard" />
+						<label for="comment">Some comment</label>
+						<input type="text" id="comment" name="comment_postard" />
+					</div>
+				</div>
+			</div>
+			<div class="postcard-footer">
+				<button>Send My Postcard</button>
+			</div>
+		</div>
+	</body>
+</html>
